@@ -10,6 +10,7 @@
     * Forking support
     * Refactor functionality into encapsulation modules (ExitMagic, Tap, etc...)
     * Add Test Tracing instead of $Level
+    * Add tap_encoding function
     * Bugfixes!
 
 1.001004_003 Sat May  17 13:43:00 PST 2014
